crates/swc_ecma_parser/tests/test262-error-references/fail/68766c3f46c4851a.js.stderr
error: Invalid character in identifier
 --> $DIR/tests/test262-parser/fail/68766c3f46c4851a.js:1:1
  |
1 | \u005c
  | ^^^^^^

